--- a/less/global.less
+++ b/less/global.less
@@ -1,27 +1,43 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
-//? Choose fonts
-// html, body {
-//     font-family: ;
-// }
-// h1, h2, h3, h4, h5 {
-//     font-family: ;
-// }
+html,body {
+  font-family: 'Roboto';
+}
 
-//? 
-//h1 {size, padding
-//h2 {size, padding
-//p {line height, size, etc.
+h1,h2 {
+  font-family: 'Norican';
+}
+
+h3,h4,h5 {
+  font-family: 'Lato';
+}
+
+.logo {
+  .flex(row, wrap);
+  font-size: 3rem;
+
+  .footlogo {
+    font-size: 2.2rem;
+  }
+}
+
+p {
+  font-size: 1.6rem;
+}
+
+a {
+  .aStyle();
+}
 
 img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 //?
