--- a/less/global.less
+++ b/less/global.less
@@ -10,17 +10,13 @@ html,body {
   font-family: 'Roboto';
 }
 
-h1,h2 {
-  font-family: 'Norican';
-}
-
-h3,h4,h5 {
+h1,h2,h3,h4,h5 {
   font-family: 'Lato';
 }
 
 .logo {
   .flex(row, wrap);
-  font-size: 3rem;
+  font-size: 2.6rem;
 
   .footlogo {
     font-size: 2.2rem;
@@ -40,5 +36,7 @@ img {
   height: auto;
 }
 
-//?
-// A container? .container {max-width:, width:, margin:}
+.container {
+  width: 100%;
+  margin: 0 auto;
+}
