--- a/css/index.css
+++ b/css/index.css
@@ -148,6 +148,9 @@ h4,
 h5 {
   font-family: 'Lato';
 }
+h3 {
+  font-size: 2.8rem;
+}
 .logo {
   display: flex;
   flex-direction: row;
@@ -159,6 +162,7 @@ h5 {
 }
 p {
   font-size: 1.6rem;
+  line-height: 1;
 }
 a {
   text-decoration: none;
@@ -170,6 +174,7 @@ img {
   height: auto;
 }
 .container {
+  max-width: 1000px;
   width: 100%;
   margin: 0 auto;
 }
@@ -201,6 +206,20 @@ header .navContainer nav {
   width: 200px;
   justify-content: space-between;
 }
+footer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  padding: 1%;
+  justify-content: space-between;
+  align-items: center;
+}
+footer small {
+  position: absolute;
+  left: 45%;
+  color: #4b5c6b;
+}
 .splash {
   background: url("/assets/headimg.jpg");
   width: 100%;
@@ -210,4 +229,32 @@ header .navContainer nav {
   position: absolute;
   left: 45%;
   bottom: 10%;
+}
+.content {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.content .content-text {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 40%;
+  padding: 1%;
+}
+.content .content-text h3 {
+  margin: 5px 0;
+  margin-bottom: 20px;
+}
+.content .content-text p {
+  margin: 5px 0;
+}
+.content .content-graph {
+  width: 40%;
+  padding: 1%;
 }
