--- a/less/global.less
+++ b/less/global.less
@@ -14,6 +14,10 @@ h1,h2,h3,h4,h5 {
   font-family: 'Lato';
 }
 
+h3 {
+  font-size: 2.8rem;
+}
+
 .logo {
   .flex(row, wrap);
   font-size: 2.6rem;
@@ -25,6 +29,7 @@ h1,h2,h3,h4,h5 {
 
 p {
   font-size: 1.6rem;
+  line-height: 1;
 }
 
 a {
@@ -37,6 +42,7 @@ img {
 }
 
 .container {
+  max-width: 1000px;
   width: 100%;
   margin: 0 auto;
 }
