--- a/less/home.less
+++ b/less/home.less
@@ -8,3 +8,28 @@
       bottom: 10%;
     }
   }
+
+  .content {
+    .flex(row, wrap);
+    width: 100%;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    .content-text {
+      .flex(column, wrap);
+      width: 40%;
+      padding: 1%;
+      h3 {
+        margin: 5px 0;
+        margin-bottom: 20px;
+      }
+      p {
+        margin: 5px 0;
+      }
+    }
+    .content-graph {
+      width: 40%;
+      padding: 1%;
+    }
+  }
