--- a/less/footer.less
+++ b/less/footer.less
@@ -4,6 +4,7 @@ footer {
     padding: 1%;
     justify-content: space-between;
     align-items: center;
+    background-color: @barcolor;
 
     small {
       position: absolute;
