--- a/less/home.less
+++ b/less/home.less
@@ -1,7 +1,11 @@
   .splash {
-    background: url("/assets/headimg.jpg");
+    background: url("/assets/headimg.jpg") no-repeat center center fixed;
     width: 100%;
-    height: 100vh;
+    height: 100vh; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     button {
       position: absolute;
       left: 45%;
