--- a/css/index.css
+++ b/css/index.css
@@ -146,19 +146,28 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: 'Lato';
+  font-family: 'Barlow';
 }
 h3 {
-  font-size: 2.8rem;
+  font-size: 3rem;
+  font-weight: bolder;
+  line-height: 24px;
 }
 .logo {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  width: auto;
   font-size: 2.6rem;
+}
+.logo h1 {
+  padding-left: 10px;
 }
 .logo .footlogo {
   font-size: 2.2rem;
+}
+.logo h2 {
+  padding-left: 6px;
 }
 p {
   font-size: 1.6rem;
