--- a/less/global.less
+++ b/less/global.less
@@ -11,19 +11,28 @@ html,body {
 }
 
 h1,h2,h3,h4,h5 {
-  font-family: 'Lato';
+  font-family: 'Barlow';
 }
 
 h3 {
-  font-size: 2.8rem;
+  font-size: 3rem;
+  font-weight: bolder;
+  line-height: 24px;
 }
 
 .logo {
   .flex(row, wrap);
+  width: auto;
   font-size: 2.6rem;
+  h1 {
+    padding-left: 10px;
+  }
 
   .footlogo {
     font-size: 2.2rem;
+  }
+  h2 {
+    padding-left: 6px;
   }
 }
 
