--- a/css/index.css
+++ b/css/index.css
@@ -177,6 +177,10 @@ a {
   text-decoration: none;
   color: #293845;
   font-size: 1.6rem;
+  transition: 300ms ease;
+}
+a:hover {
+  color: #798895;
 }
 img {
   max-width: 100%;
@@ -231,18 +235,27 @@ footer small {
   color: #4b5c6b;
 }
 .splash {
-  background: url("/assets/headimg.jpg") no-repeat center center fixed;
   width: 100%;
   height: 100vh;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  background: url("/assets/headimg.jpg") no-repeat center center fixed;
   background-size: cover;
+  background-position: 50% 50%;
 }
 .splash button {
   position: absolute;
   left: 45%;
-  bottom: 10%;
+  bottom: 6%;
+  background: #293845;
+  color: #dfe6ed;
+  border: 1px solid #293845;
+  padding: 1% 2%;
+  border-radius: 5px;
+  font-size: 1.8rem;
+  transition: 300ms ease;
+}
+.splash button:hover {
+  background: #dfe6ed;
+  color: #293845;
 }
 .content {
   display: flex;
@@ -258,7 +271,7 @@ footer small {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  width: 40%;
+  width: 50%;
   padding: 1%;
 }
 .content .content-text h3 {
@@ -269,6 +282,63 @@ footer small {
   margin: 5px 0;
 }
 .content .content-graph {
-  width: 40%;
+  width: 50%;
   padding: 1%;
+}
+.member-section {
+  margin: 100px auto;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.member-section .member {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.member-section .member img {
+  width: 25%;
+  height: auto;
+  border-radius: 50%;
+}
+.member-section .member .member-text {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 33%;
+}
+.member-section .member .member-text a {
+  margin: 6px 0;
+}
+.member-section .member .member-text p {
+  margin: 6px 0;
+}
+.member-section .member-reverse {
+  width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.member-section .member-reverse img {
+  width: 25%;
+  height: auto;
+  border-radius: 50%;
+}
+.member-section .member-reverse .member-text {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 33%;
+}
+.member-section .member-reverse .member-text a {
+  margin: 6px 0;
+}
+.member-section .member-reverse .member-text p {
+  margin: 6px 0;
 }
