--- a/less/variables.less
+++ b/less/variables.less
@@ -13,3 +13,6 @@
 @copycolor: @mediumdark;
 
 // Media Queries
+@tablet: ~"(max-width: 930px)";
+@tablet-small: ~"(max-width: 768px)";
+@mobile: ~"(max-width: 480px)";
