--- a/less/footer.less
+++ b/less/footer.less
@@ -1,7 +1,7 @@
 footer {
     .flex(row, wrap);
     width: 100%;
-    padding: 1%;
+    padding: 1% 2%;
     justify-content: space-between;
     align-items: center;
     background-color: @barcolor;
