--- a/less/nav.less
+++ b/less/nav.less
@@ -10,13 +10,14 @@ header {
   .navContainer {
     .flex(row, wrap);
     width: 100%;
-    padding: 1%;
+    padding: 1% 2%;
     justify-content: space-between;
     align-items: center;
     nav {
       .flex(row, wrap);
       width: 200px;
       justify-content: space-between;
+      padding-right: 5px;
     }
   }
 }
