--- a/css/index.css
+++ b/css/index.css
@@ -301,7 +301,7 @@ footer small {
 .splash {
   width: 100%;
   height: 100vh;
-  background: url("/assets/headimg.jpg") no-repeat center center fixed;
+  background: url("../assets/headimg.jpg") no-repeat center center fixed;
   background-size: cover;
   background-position: 50% 50%;
 }
