--- a/less/home.less
+++ b/less/home.less
@@ -1,7 +1,7 @@
   .splash {
     width: 100%;
     height: 100vh;
-    background: url("/assets/headimg.jpg") no-repeat center center fixed;
+    background: url("../assets/headimg.jpg") no-repeat center center fixed;
     background-size: cover;
     background-position: 50% 50%;
     button {
