--- a/css/index.css
+++ b/css/index.css
@@ -159,15 +159,23 @@ h3 {
   flex-wrap: wrap;
   width: auto;
   font-size: 2.6rem;
+  align-items: center;
 }
 .logo h1 {
   padding-left: 10px;
 }
+.logo .fas {
+  font-size: 2.6rem;
+}
 .logo .footlogo {
   font-size: 2.2rem;
+  align-items: center;
 }
 .logo h2 {
   padding-left: 6px;
+}
+.logo .fas {
+  font-size: 2.2rem;
 }
 p {
   font-size: 1.6rem;
