--- a/less/global.less
+++ b/less/global.less
@@ -24,15 +24,23 @@ h3 {
   .flex(row, wrap);
   width: auto;
   font-size: 2.6rem;
+  align-items: center;
   h1 {
     padding-left: 10px;
+  }
+  .fas {
+    font-size: 2.6rem;
   }
 
   .footlogo {
     font-size: 2.2rem;
+    align-items: center;
   }
   h2 {
     padding-left: 6px;
+  }
+  .fas {
+    font-size: 2.2rem;
   }
 }
 
